####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = account-folder.xpm bank-folder.xpm startlogo.png kmymoney2_setting_list.png titlelabel_accounts.png titlelabel_background.png titlelabel_categories.png titlelabel_home.png titlelabel_institutions.png titlelabel_investments.png titlelabel_ledgers.png titlelabel_payees.png titlelabel_reports.png titlelabel_schedule.png

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/kmymoney2/pics/
	$(INSTALL_DATA) $(srcdir)/account-folder.xpm $(kde_datadir)/kmymoney2/pics/account-folder.xpm
	$(INSTALL_DATA) $(srcdir)/bank-folder.xpm $(kde_datadir)/kmymoney2/pics/bank-folder.xpm
	$(INSTALL_DATA) $(srcdir)/startlogo.png $(kde_datadir)/kmymoney2/pics/startlogo.png
	$(INSTALL_DATA) $(srcdir)/kmymoney2_setting_list.png $(kde_datadir)/kmymoney2/pics/setting_list.png
	$(INSTALL_DATA) $(srcdir)/titlelabel_accounts.png $(kde_datadir)/kmymoney2/pics/
	$(INSTALL_DATA) $(srcdir)/titlelabel_background.png $(kde_datadir)/kmymoney2/pics/
	$(INSTALL_DATA) $(srcdir)/titlelabel_categories.png $(kde_datadir)/kmymoney2/pics/
	$(INSTALL_DATA) $(srcdir)/titlelabel_home.png $(kde_datadir)/kmymoney2/pics/
	$(INSTALL_DATA) $(srcdir)/titlelabel_institutions.png $(kde_datadir)/kmymoney2/pics/
	$(INSTALL_DATA) $(srcdir)/titlelabel_investments.png $(kde_datadir)/kmymoney2/pics/
	$(INSTALL_DATA) $(srcdir)/titlelabel_ledgers.png $(kde_datadir)/kmymoney2/pics/
	$(INSTALL_DATA) $(srcdir)/titlelabel_payees.png $(kde_datadir)/kmymoney2/pics/
	$(INSTALL_DATA) $(srcdir)/titlelabel_reports.png $(kde_datadir)/kmymoney2/pics/
	$(INSTALL_DATA) $(srcdir)/titlelabel_schedule.png $(kde_datadir)/kmymoney2/pics/

uninstall-local:
	-rm -f $(kde_datadir)/kmymoney2/pics/account-folder.xpm
	-rm -f $(kde_datadir)/kmymoney2/pics/bank-folder.xpm
	-rm -f $(kde_datadir)/kmymoney2/pics/startlogo.png
	-rm -f $(kde_datadir)/kmymoney2/pics/setting_list.png
	-rm -f $(kde_datadir)/kmymoney2/pics/titlelabel_accounts.png
	-rm -f $(kde_datadir)/kmymoney2/pics/titlelabel_background.png
	-rm -f $(kde_datadir)/kmymoney2/pics/titlelabel_categories.png
	-rm -f $(kde_datadir)/kmymoney2/pics/titlelabel_home.png
	-rm -f $(kde_datadir)/kmymoney2/pics/titlelabel_institutions.png
	-rm -f $(kde_datadir)/kmymoney2/pics/titlelabel_investments.png
	-rm -f $(kde_datadir)/kmymoney2/pics/titlelabel_ledgers.png
	-rm -f $(kde_datadir)/kmymoney2/pics/titlelabel_payees.png
	-rm -f $(kde_datadir)/kmymoney2/pics/titlelabel_reports.png
	-rm -f $(kde_datadir)/kmymoney2/pics/titlelabel_schedule.png

####### kdevelop will overwrite this part!!! (end)############

