####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = account-folder.xpm bank-folder.xpm startlogo.png kmymoney2_setting_list.png titlelabel_accounts.png titlelabel_background.png titlelabel_categories.png titlelabel_home.png titlelabel_institutions.png titlelabel_investments.png titlelabel_ledgers.png titlelabel_payees.png titlelabel_reports.png titlelabel_schedule.png

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/kmymoney2/pics/
	$(INSTALL_DATA) $(srcdir)/account-folder.xpm $(kde_datadir)/kmymoney2/pics/account-folder.xpm
	$(INSTALL_DATA) $(srcdir)/bank-folder.xpm $(kde_datadir)/kmymoney2/pics/bank-folder.xpm
	$(INSTALL_DATA) $(srcdir)/startlogo.png $(kde_datadir)/kmymoney2/pics/startlogo.png
	$(INSTALL_DATA) $(srcdir)/kmymoney2_setting_list.png $(kde_datadir)/kmymoney2/pics/setting_list.png

uninstall-local:
	-rm -f $(kde_datadir)/kmymoney2/pics/account-folder.xpm
	-rm -f $(kde_datadir)/kmymoney2/pics/bank-folder.xpm
	-rm -f $(kde_datadir)/kmymoney2/pics/startlogo.png
	-rm -f $(kde_datadir)/kmymoney2/pics/setting_list.png

####### kdevelop will overwrite this part!!! (end)############

