noinst_LIBRARIES = libviews.a

INCLUDES = $(all_includes) -I..

libviews_a_METASOURCES = AUTO

libviews_a_SOURCES = kreportsview.cpp kledgerviewinvestments.cpp kledgerviewliability.cpp kledgerviewloan.cpp kmymoneytransaction.cpp kledgerviewcash.cpp kledgerviewasset.cpp kledgerviewcreditcard.cpp kledgerviewsavings.cpp kledgerviewcheckings.cpp kledgerview.cpp kgloballedgerview.cpp kmymoneyfile.cpp kinvestmentlistitem.cpp kinvestmentviewdecl.ui kinvestmentview.cpp kstocktransactionviewdecl.ui kstocktransactionview.cpp kscheduledlistitem.cpp kscheduledviewdecl.ui kscheduledview.cpp kpayeesview.cpp kpayeesviewdecl.ui khomeview.cpp kcategoriesviewdecl.ui kcategoriesview.cpp kmymoneyview.cpp kbanklistitem.cpp kbankviewdecl.ui kbanksview.cpp

instdir=$(includedir)/kmymoney
inst_HEADERS = kmymoneyview.h

noinst_HEADERS = kbanklistitem.h kbanksview.h kcategoriesview.h kgloballedgerview.h khomeview.h kinvestmentlistitem.h kinvestmentview.h kledgerviewasset.h kledgerviewcash.h kledgerviewcheckings.h kledgerviewcreditcard.h kledgerview.h kledgerviewinvestments.h kledgerviewliability.h kledgerviewloan.h kledgerviewsavings.h kmymoneyfile.h kmymoneytransaction.h kpayeesview.h kreportsview.h kscheduledlistitem.h kscheduledview.h kstocktransactionview.h

BUILT_SOURCES=kbankviewdecl.h
