####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libwidgets.a

INCLUDES = $(all_includes)

libwidgets_a_METASOURCES = AUTO

libwidgets_a_SOURCES = kmymoneysplittable.cpp kmymoneycombo.cpp kmymoneyhlayout.cpp kmymoneylineedit.cpp kmymoneytable.cpp kmymoneyedit.cpp kmymoneydateinput.cpp 


EXTRA_DIST = kmymoneydateinput.cpp kmymoneydateinput.h kmymoneyedit.cpp kmymoneyedit.h kmymoneytable.cpp kmymoneytable.h kmymoneylineedit.cpp kmymoneylineedit.h kmymoneyhlayout.cpp kmymoneyhlayout.h kmymoneycombo.cpp kmymoneycombo.h kmymoneysplittable.cpp kmymoneysplittable.h 

####### kdevelop will overwrite this part!!! (end)############
