####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libwidgets.a

INCLUDES = $(all_includes)

libwidgets_a_METASOURCES = AUTO

libwidgets_a_SOURCES = kmymoneypriceview.cpp kmymoneypriceviewdecl.ui kschedulebriefwidget.ui kmymoneyaccountselector.cpp kmymoneyregisterloan.cpp kmymoneyregistersearch.cpp kmymoneybriefschedule.cpp kmymoneyscheduleddatetbl.cpp kmymoneydatetbl.cpp kmymoneyscheduledcalendar.cpp kmymoneycalendar.cpp kmymoneycalculator.cpp kmymoneycategory.cpp kmymoneypayee.cpp kmymoneytransactionform.cpp kmymoneyregistercheckings.cpp kmymoneyregister.cpp kmymoneysplittable.cpp kmymoneycombo.cpp kmymoneyhlayout.cpp kmymoneylineedit.cpp kmymoneyedit.cpp kmymoneydateinput.cpp 


EXTRA_DIST = kmymoneydateinput.cpp kmymoneydateinput.h kmymoneyedit.cpp kmymoneyedit.h kmymoneylineedit.cpp kmymoneylineedit.h kmymoneyhlayout.cpp kmymoneyhlayout.h kmymoneycombo.cpp kmymoneycombo.h kmymoneysplittable.cpp kmymoneysplittable.h kmymoneyregister.cpp kmymoneyregister.h kmymoneyregistercheckings.cpp kmymoneyregistercheckings.h kmymoneytransactionform.h kmymoneytransactionform.cpp kmymoneypayee.cpp kmymoneypayee.h kmymoneycategory.cpp kmymoneycategory.h kmymoneycalculator.cpp kmymoneycalculator.h kmymoneycalendar.cpp kmymoneycalendar.h kmymoneyscheduledcalendar.cpp kmymoneyscheduledcalendar.h kmymoneydatetbl.cpp kmymoneydatetbl.h kmymoneyscheduleddatetbl.cpp kmymoneyscheduleddatetbl.h kmymoneybriefschedule.cpp kmymoneybriefschedule.h kmymoneyregistersearch.cpp kmymoneyregistersearch.h kmymoneyregisterloan.cpp kmymoneyregisterloan.h kmymoneyaccountselector.cpp kmymoneyaccountselector.h kschedulebriefwidget.ui kmymoneypriceviewdecl.ui kmymoneypriceview.cpp kmymoneypriceview.h 

####### kdevelop will overwrite this part!!! (end)############

# make sure, automatically generated files exist
BUILT_SOURCES = ../dialogs/kupdatestockpricedlgdecl.h

../dialogs/kupdatestockpricedlgdecl.h:
	make -C ../dialogs kupdatestockpricedlgdecl.h
